<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/usernameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btn_add_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_button_add_event" />
    <Button
        android:id="@+id/btn_add_event_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_button_add_event_map"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_button_logout" />

</LinearLayout>