<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.85"
        android:orientation="horizontal"
        android:id="@+id/fragment_a">



    <Button
        android:id="@+id/button_home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_map"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/button_map"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button_schedule"
        app:layout_constraintStart_toEndOf="@+id/button_home"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/button_schedule"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_schedule"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_settings"
        app:layout_constraintStart_toStartOf="@id/button_map"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.25" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/button_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_schedule"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.25" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>