<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScheduleFragment"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/event_name_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:layout_weight="0.34"
            android:text="@string/event_name_title"/>
        <TextView
            android:id="@+id/event_date_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:layout_weight="0.33"
            android:text="@string/event_date_title"/>

        <TextView
            android:id="@+id/event_importance_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.33"
            android:textSize="20sp"
            android:text="@string/event_importance_title">
        </TextView>

    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:id="@+id/rec_list"/>
</LinearLayout>